[gd_scene load_steps=14 format=3 uid="uid://c5yog55sp3v55"]

[ext_resource type="Script" uid="uid://d27bkw3ucngm8" path="res://Scripts/main.gd" id="1_8gbba"]
[ext_resource type="PackedScene" uid="uid://drug4d7ku14u5" path="res://Objects/bird.tscn" id="2_bo1nx"]
[ext_resource type="PackedScene" uid="uid://cl1yxu01i8a41" path="res://Objects/ground.tscn" id="4_jjvhh"]
[ext_resource type="FontFile" uid="uid://cq0pvxj2c6vaq" path="res://Fonts/8-bit Arcade In.ttf" id="5_344ge"]
[ext_resource type="PackedScene" uid="uid://rscxba2643uh" path="res://Objects/game_over_ui.tscn" id="5_kry3j"]
[ext_resource type="PackedScene" uid="uid://dbanlffo3r05j" path="res://Objects/tutorial_ui.tscn" id="6_21xkr"]
[ext_resource type="AudioStream" uid="uid://b41gmga2os6j5" path="res://Sounds/vgdeathsound.wav" id="7_6bp64"]
[ext_resource type="PackedScene" uid="uid://56e07nasarol" path="res://Objects/background.tscn" id="7_344ge"]
[ext_resource type="PackedScene" uid="uid://dihpe5i7enago" path="res://Objects/menu_ui.tscn" id="8_hptm8"]
[ext_resource type="AudioStream" uid="uid://fkwu21r6ky7j" path="res://Sounds/Music/LOFI/Morning Walk.ogg" id="9_ynf5e"]

[sub_resource type="Animation" id="Animation_d1ilt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScoreLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_hptm8"]
resource_name = "score_animation"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScoreLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6iyac"]
_data = {
&"RESET": SubResource("Animation_d1ilt"),
&"score_animation": SubResource("Animation_hptm8")
}

[node name="Main" type="Node"]
script = ExtResource("1_8gbba")

[node name="Background" parent="." instance=ExtResource("7_344ge")]

[node name="Background2" parent="." instance=ExtResource("7_344ge")]
position = Vector2(1280, 0)

[node name="Bird" parent="." instance=ExtResource("2_bo1nx")]
position = Vector2(360, 637.5)

[node name="Ground" parent="." instance=ExtResource("4_jjvhh")]
z_index = 1
position = Vector2(476, 1355)

[node name="PipeSpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="MenuUI" parent="." instance=ExtResource("8_hptm8")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = 58.0
offset_right = 67.0
offset_bottom = 168.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("5_344ge")
theme_override_font_sizes/font_size = 140
text = "0"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
&"": SubResource("AnimationLibrary_6iyac")
}

[node name="GameOverUI" parent="." instance=ExtResource("5_kry3j")]

[node name="TutorialUI" parent="." instance=ExtResource("6_21xkr")]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_6bp64")
bus = &"SFX"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("9_ynf5e")
autoplay = true
bus = &"Music"

[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="PipeSpawnTimer" to="." method="_on_pipe_spawn_timer_timeout"]
[connection signal="toggle_random_background" from="MenuUI" to="." method="_on_menu_ui_toggle_random_background"]
[connection signal="restart" from="GameOverUI" to="." method="_on_game_over_ui_restart"]
